[gd_scene load_steps=6 format=2]

[ext_resource path="res://RainIsoMainContents/Scenes/SmoothFollow.gd" type="Script" id=1]
[ext_resource path="res://RainIsoMainContents/Scenes/WaterBody.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 tint : hint_color = vec4(1.0);

void fragment() {
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV);
	color = mix(color, tint, 0.3);
	color = mix(vec4(0.5), color, 1.4);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/tint = Color( 1, 1, 1, 1 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array(  )
}

[node name="MelodyTownWater" type="Node2D"]
script = ExtResource( 2 )

[node name="WaterPolygon" type="Polygon2D" parent="."]
material = SubResource( 2 )

[node name="WaterBorder" type="Path2D" parent="."]
curve = SubResource( 3 )
script = ExtResource( 1 )

[node name="WaterBodyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterBodyArea"]
